syntax="proto3";

package api_v3;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";

import "google/api/annotations.proto";

import "protoc-gen-swagger/options/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

option go_package = ".;api_v3";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
		title: "User service";
		version: "3";
	};
    external_docs: {
        url: "https://github.com/gogo/grpc-example";
        description: "gRPC example";
    };
    schemes: HTTP;
    schemes: HTTPS;
};

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

service UserService {
    rpc AddUser(User) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v3/users"
            body: "*"
        };
    };
    rpc ListUsers(ListUsersRequest) returns (stream User) {
        option (google.api.http) = {
            get: "/api/v3/users"
        };
    };
    rpc ListUsersByRole (UserRole) returns (stream User) {
        option (google.api.http) = {
            get: "/api/v3/users/role"
        };
    };
    rpc UpdateUser (UpdateUserRequest) returns (User) {
        option (google.api.http) = {
            patch: "/api/v3/users/{user.id}"
            body: "*"
        };
    };
}

enum Role {
    GUEST = 0;
    MEMBER = 1;
    ADMIN = 2;
}

message User {
    uint32 id = 1 [
        (validator.field) = {
            int_gt: 0
            human_error: "ID must be a positive integer"
        }
    ];
    Role role = 2;
    google.protobuf.Timestamp created_at = 3 [
        (gogoproto.stdtime) = true
    ];
}

message UserRole {
    Role role = 1;
}

message ListUsersRequest {
    // list users created after timestamp
    google.protobuf.Timestamp created_since = 1 [
        (gogoproto.stdtime) = true
    ];
    // list users in duration from created_since
    google.protobuf.Duration older_then = 2 [
        (gogoproto.stdduration) = true
    ];
}

message UpdateUserRequest {
    User user = 1;
    // The update mask applies to the resource. For the `FieldMask` definition,
    // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
    google.protobuf.FieldMask update_mask = 2;
}